--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,9 +9,11 @@
 @import'layout/global';
 @import'layout/header';
 @import'layout/nav';
-@import'layout/gallery';
-@import'layout/contact';
 
 @import'pages/home';
+@import'pages/gallery';
+@import'pages/contact';
+@import'pages/news';
+
 
 
