--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -59,12 +59,39 @@ nav {
     border-radius: 0 0 8px 8px;
 }
 .n-nav {
-    ul {
+    .main-menu {
         display: flex;
         justify-content: center;
         align-items: center;
-        li {
+        .main-li {
             padding-right: 30px;
+            position: relative;
+            &:hover {
+                .sub-menu {
+                    display: block;
+                }
+            }
+            .sub-menu {
+                display: none;
+                position: absolute;
+                background-color: #130d05cd;
+                border-radius: 8px;
+                padding: 15px 20px;
+                z-index: 3;
+                li:not(:last-child){
+                    padding-bottom: 7.5px;
+                }
+                a {
+                    color: white;
+                    font-family: "Roboto", sans-serif;
+                    transition: ease-in-out .5s;
+                    &:hover {
+                        color: orange;
+                        transition: ease-in-out .5s;
+                    }
+                }
+            
+            }
         }
     }
 }
