--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -32,73 +32,145 @@
     margin-left: 0;
     margin-right: 2.5vw;
 }
+.s3 {
+    margin-left: 2.5vw;
+    margin-right: 0;
+}
 .s1-img1{
     position: absolute; 
     z-index: -2;
-    top: 20px;
+    top: 2.5%;
     right: 0;
-    width: 250px;
+    width: 42%;
 }
 .s1-img2{
     position: absolute;
     z-index: -2;
-    top: 150px;
-    right: 280px;   
-    width: 250px;
+    top: 18%;
+    left: 0;   
+    width: 42%;
 }
 .s1-img3{
     position: absolute; 
     z-index: -2;
-    top: 20px;
-    left: 40px;
-    width: 250px;
+    top: 2.5%;
+    left: 0;
+    width: 42%;
 }
 .s1-img4{
     position: absolute;
     z-index: -2;
-    top: 150px;
-    left: 320px;   
-    width: 250px;
+    top: 18%;
+    right: 0;  
+    width: 42%;
 }
 .s1-form1{
     position: absolute;
     z-index: -3;
-    top: 100px;
-    right: 150px;   
-    width: 250px;
-    height: 320px;
+    top: 12%;
+    right: 28.5%;   
+    width: 41%;
+    height: 37.5%;
     background-color: rgba(255, 166, 0, 0.876);
 }
 .s1-form2{
     position: absolute;
     z-index: -4;
-    top: 75px;
-    right: 125px;   
-    width: 300px;
-    height: 370px;
+    top: 9%;
+    right: 24.5%;   
+    width: 49.5%;
+    height: 43.7%;
     background-color: rgba(255, 166, 0, 0.226);
 }
 .s1-form3{
     position: absolute;
     z-index: -3;
     top: 100px;
-    left: 190px;   
-    width: 250px;
-    height: 320px;
+    left: 28.5%;   
+    width: 41.5%;
+    height: 38%;
     background-color: rgba(255, 166, 0, 0.876);
 }
 .s1-form4{
     position: absolute;
     z-index: -4;
     top: 75px;
-    left: 165px;   
-    width: 300px;
-    height: 370px;
+    left: 24.5%;   
+    width: 49.5%;
+    height: 43.7%;
     background-color: rgba(255, 166, 0, 0.226);
 }
+// .s1-img1{
+//     position: absolute; 
+//     z-index: -2;
+//     top: 20px;
+//     right: 0;
+//     width: 250px;
+// }
+// .s1-img2{
+//     position: absolute;
+//     z-index: -2;
+//     top: 150px;
+//     right: 280px;   
+//     width: 250px;
+// }
+// .s1-img3{
+//     position: absolute; 
+//     z-index: -2;
+//     top: 20px;
+//     left: 40px;
+//     width: 250px;
+// }
+// .s1-img4{
+//     position: absolute;
+//     z-index: -2;
+//     top: 150px;
+//     left: 320px;   
+//     width: 250px;
+// }
+// .s1-form1{
+//     position: absolute;
+//     z-index: -3;
+//     top: 100px;
+//     right: 150px;   
+//     width: 250px;
+//     height: 320px;
+//     background-color: rgba(255, 166, 0, 0.876);
+// }
+// .s1-form2{
+//     position: absolute;
+//     z-index: -4;
+//     top: 75px;
+//     right: 125px;   
+//     width: 300px;
+//     height: 370px;
+//     background-color: rgba(255, 166, 0, 0.226);
+// }
+// .s1-form3{
+//     position: absolute;
+//     z-index: -3;
+//     top: 100px;
+//     left: 190px;   
+//     width: 250px;
+//     height: 320px;
+//     background-color: rgba(255, 166, 0, 0.876);
+// }
+// .s1-form4{
+//     position: absolute;
+//     z-index: -4;
+//     top: 75px;
+//     left: 165px;   
+//     width: 300px;
+//     height: 370px;
+//     background-color: rgba(255, 166, 0, 0.226);
+// }
 .two {
+    width: 100%;
+    height: 80vh;
+    display: flex;
     justify-content: space-between;
     align-items: start;
+    margin-left: -3%;
 }
 .two-img-box {
     cursor: pointer;
