--- a/styles/pages/_gallery.scss
+++ b/styles/pages/_gallery.scss
@@ -73,7 +73,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 70px 0;
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+.gallery-btns2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 .gal {
     border-radius: 10px;
