--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -175,8 +175,8 @@
 .two-img-box {
     cursor: pointer;
     img {
-        height: 300px;
-        width: 250px;
+        height: 35vh;
+        width: 15vw;
         object-fit: cover;
         object-position: center;
         border-radius: 5px 5px 0 0;
@@ -231,7 +231,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 100px;
+    top: 100%;
     left: 0;
     display: flex;
     align-items: center;
