--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -13,12 +13,19 @@ html.lenis {
   }
 // Lenis End
 
+body {
+   width: 100vw;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   overflow-x: hidden
+}
+
 a {
     text-decoration: none;
     font-family: "Roboto", sans-serif;
 }
 .link {
-    
         color: white;
         transition: ease-in-out .5s;
         &:hover{
@@ -36,11 +43,25 @@ i:hover {
 .one {
     margin-top: 300px;
 }
+@media (max-width: 1050px) {
+    .one {
+        margin-top: 150px;
+    }
+}
 section {
     height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+@media (max-width: 1050px) {
+    section {
+        align-items: start;
+        height: 120vh;
+    }
+    section:nth-of-type(2) {
+        height: 300vh;
+    }
 }
 .hero-page {
         height: 40vh;
