--- a/styles/pages/_news.scss
+++ b/styles/pages/_news.scss
@@ -18,6 +18,8 @@
     }
     
 }
+
+
 .news-main-container {
     display: flex;
     flex-direction: column;
@@ -98,13 +100,14 @@
    width: 200px;
 }
 .latest_post_image {
-    height: 100px;
+    height: 250px;
     width:30vw;
     margin-bottom: 10px;
     object-fit: cover;
     object-position: top;
     border-radius: 5px;
 }
+
 .latest_post {
     a {
         text-decoration: none;
@@ -124,4 +127,28 @@
         font-family: "Roboto", sans-serif;
         font-size: 14px;
     }
+}
+@media (max-width: 1050px) {
+    .news-container {
+        flex-direction: column;
+        align-items: center;
+        width: 80vw;
+        margin: 0;
+    }
+    .news-main-container {
+        width: 80vw;
+        margin: 0;
+    }
+    .news-side-container {
+        width: 80vw;
+        margin: 0;
+    }
+}
+
+@media (max-width: 1050px) {
+    .latest_post_image {
+        width: 80vw;
+        height: 350px;
+    }
+    
 }
