--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -146,7 +146,7 @@ nav {
         position: fixed;
         top: -50px;
         left: 0;
-        margin-left: -100%;
+        margin-left: -110%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -219,7 +219,7 @@ nav {
     }
     div {
       height: 4px;
-    //   background:#fff;
+      background:orange;
     color: transparent;
       border-radius:5px;
       @include transition;
@@ -237,7 +237,7 @@ nav {
 }
 @media (max-width: 762px) {
     .n-logo {
-      color: transparent;
+      color: orange;
       padding-left: 0;
       padding-right: 30px;
     }
